--- a/.github/workflows/build-dotnet-library.yml
+++ b/.github/workflows/build-dotnet-library.yml
@@ -126,7 +126,7 @@ jobs:
           dotnet-version: '5.0.202'
 
       - name: Pack
-        run: dotnet pack -c Release -p:PackageVersion=0.0.$GITHUB_RUN_ID -o nupkg ./AzureMobileTemplates.csproj
+        run: dotnet pack -c Release -p:PackageVersion=0.0.$GITHUB_RUN_ID ./AzureMobileTemplates.csproj
 
       - name: Push to GitHub Feed
         run: find ./bin -type f -name '*.nupkg' -print -exec curl -vX PUT -u "$GITHUB_USER:$GITHUB_TOKEN" -F package=@{} $GITHUB_FEED \;
