--- a/templates/dotnet/templates/Template.AzureMobileServer/Template.AzureMobileServer.csproj
+++ b/templates/dotnet/templates/Template.AzureMobileServer/Template.AzureMobileServer.csproj
@@ -6,16 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.5">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.*">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.1">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.*">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.AzureMobile.Server" Version="5.0.0-preview.1" />
-    <PackageReference Include="Microsoft.AzureMobile.Server.EFCore" Version="5.0.0-preview.1" />
+    <PackageReference Include="Microsoft.AzureMobile.Server" Version="*" />
+    <PackageReference Include="Microsoft.AzureMobile.Server.EFCore" Version="*" />
   </ItemGroup>
 </Project>
