--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           mkdir nupkg
           find src -iname '*.nupkg' -exec cp \{\} ./nupkg \;
-          
+
       - 
         name: Upload Artifacts
         uses: actions/upload-artifact@v2
@@ -78,7 +78,7 @@ jobs:
       - 
         name: Push to GitHub Package Feed
         run: |
-          for f in `find ./nupkg -type f -name '*.nupkg'
+          for f in ./nupkg/*.nupkg
           do
             curl -vX PUT u "$GITHUB_USER:$GITHUB_TOKEN" -F package=@$f $GITHUB_FEED
           done
