--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -77,5 +77,6 @@ jobs:
         run: |
           for f in ./nupkg/*.nupkg
           do
+            echo Pushing $f
             dotnet nuget push $f --api-key $GITHUB_TOKEN --source "github"
           done
