Fixed Nuget feed for github packages

--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -17,9 +17,9 @@ env:
   # Don't display the logo
   DOTNET_NOLOGO: true
   # GitHub Packages Feed settings
-  GITHUB_FEED: https://nuget.pkg.github.com/azure-mobile-apps/
+  GITHUB_FEED: https://nuget.pkg.github.com/Azure/
+  GITHUB_USERNAME: adrianhall
   GiTHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  GITHUB_PACKAGES: https://nuget.pkg.github.com/Azure/index.json
 
 jobs:
   build:
@@ -76,7 +76,8 @@ jobs:
       -
         name: Add GitHub Package Source
         run: |
-          dotnet nuget add source --username $GITHUB_USERNAME --password $GITHUB_TOKEN --store-password-in-clear-text --name github "$GITHUB_PACKAGES"
+          dotnet nuget add source --username $GITHUB_USERNAME --password $GITHUB_TOKEN --store-password-in-clear-text --name github "$GITHUB_FEED/index.json"
+
       - 
         name: Push to GitHub Package Feed
         run: |
