--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Consolidate nupkg
         run: |
           mkdir nupkg
-          find src -iname '*.nupkg' -exec cp \{\} ./nupkg \;
+          find src \( -iname '*.nupkg' ! -iname '*.symbols.nupkg' \) -exec cp \{\} ./nupkg \;
 
       - 
         name: Upload Artifacts
@@ -79,5 +79,5 @@ jobs:
 
       - 
         name: Publish to GitHub Packages
-        run: dotnet nuget push "./nupkg/*.nupkg" --api-key ${{ secrets.GITHUB_TOKEN }} --source "github" --skip-duplicate --no-symbols
+        run: dotnet nuget push "./nupkg/*.nupkg" -k ${{ secrets.GITHUB_TOKEN }} -s "github" --skip-duplicate
         
