--- a/sdk/dotnet/src/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
+++ b/sdk/dotnet/src/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="MSBuild.Sdk.Extras/3.0.23">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.1;monoandroid11.0;xamarin.ios10</TargetFrameworks>
+    <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">$(TargetFrameworks);uap10.0</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -16,7 +17,6 @@
     <PackageIcon>icon.png</PackageIcon>
     <RepositoryUrl>https://github.com/azure/azure-mobile-apps</RepositoryUrl>
     <PackageTags>azure;mobile;datasync;microsoft</PackageTags>
-
   </PropertyGroup>
 
   <PropertyGroup>
@@ -32,6 +32,41 @@
 
   <ItemGroup>
     <None Include="..\..\..\images\icon.png" PackagePath="icon.png" Pack="True" />
+    <None Include="Platforms\**\*.cs" />
+    <Compile Remove="Platforms\**\*.cs" />
   </ItemGroup>
 
+  <!-- Android Platform Support -->
+  <ItemGroup Condition="$(TargetFramework.StartsWith('monoandroid'))">
+    <Compile Include="Platforms\android\*.cs" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+  </ItemGroup>
+
+  <!-- iOS Platform Support -->
+  <ItemGroup Condition="$(TargetFramework.StartsWith('xamarin.ios'))">
+    <Compile Include="Platforms\ios\*.cs" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+  </ItemGroup>
+
+  <!-- UWP/UAP/Windows Store Platform Support -->
+  <PropertyGroup Condition="$(TargetFramework.StartsWith('uap10.0'))">
+    <TargetPlatformVersion>10.0.19041.0</TargetPlatformVersion>
+    <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
+  </PropertyGroup>
+  <ItemGroup Condition="$(TargetFramework.StartsWith('uap10.0'))">
+    <Compile Include="Platforms\uap\*.cs" />
+  </ItemGroup>
+
+  <!-- .NET Standard 2.1 Platform Support -->
+  <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard'))">
+    <Compile Include="Platforms\netstandard\*.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Platforms\netstandard\ApplicationStorage.cs" />
+  </ItemGroup>
+
+  <!-- Common package requirements -->
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
+  </ItemGroup>
 </Project>
