--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -38,12 +38,18 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 5.0.301
+      -
+        name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1.0.2
+        with:
+          vs-version: '[16.9,16.10)'
       - 
         name: Restore
         run: dotnet restore
       - 
         name: Build library
-        run: dotnet build -c Release --no-restore
+        # run: dotnet build -c Release --no-restore
+        run: msbuild /p:Configuration=Release
       - 
         name: Test library
         run: dotnet test -c Release
