--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -22,7 +22,6 @@ env:
   GiTHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   # Base version for the prerelease builds
   BASE_VERSION: 5.0.0
-  MSBUILD_PATH: "%programfiles(x86)%\\Microsoft Visual Studio\\2019\\Enterprise\\MSBuild\\Current\\Bin\\MSBuild.exe"
 
 jobs:
   build:
@@ -40,12 +39,15 @@ jobs:
         with:
           dotnet-version: 5.0.301
       - 
+        name: Add msbuild to path
+        uses: microsoft/setup-msbuild@v1.0.2
+      - 
         name: Restore
         run: dotnet restore
       - 
         name: Build library
         # run: dotnet build -c Release --no-restore
-        run: "$MSBUILD_PATH /p:Configuration=Release"
+        run: msbuild /p:Configuration=Release
       - 
         name: Test library
         run: dotnet test -c Release
