--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,14 +13,11 @@ steps:
       performMultiLevelLookup: true
       includePreviewVersions: true
 
-  - task: DotNetCoreCLI@2
-    displayName: Restore NuGet Packages
-    inputs:
-      command: restore
-      workingDirectory: $(workingDirectory)
-      configuration: $(buildConfiguration)
-      includeNuGetOrg: true
-
+  - script: |
+      dotnet restore -c $(buildConfiguration)
+    displayName: 'Restore SDK packages'
+    workingDirectory: $(workingDirectory)
+    
   - task: MSBuild@1
     inputs:
       solution: '$(workingDirectory)/*.sln'
