--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ pool:
 variables:
   buildConfiguration: 'Release'
   workingDirectory: '$(Build.SourcesDirectory)/sdk/dotnet'
-  BASE_VERSION: 4.2.0
+  BASE_VERSION: 5.0.0
   PREVIEW_LABEL: 'preview'
   BUILD_NUMBER: $[counter(format('{0}_{1}_{2}', variables['BASE_VERSION'], variables['PREVIEW_LABEL'], variables['Build.SourceBranch']), 1)]
   NUGET_VERSION: $[format('{0}-{1}.{2}', variables['BASE_VERSION'], variables['PREVIEW_LABEL'], variables['BUILD_NUMBER'])]
@@ -29,9 +29,32 @@ jobs:
       inputs:
         projects: '$(workingDirectory)/*.sln'
         command: restore
+        verbosityRestore: 'Minimal'
 
     - task: MSBuild@1
       displayName: 'Run MSBuild'
       inputs:
         solution: '$(workingDirectory)/*.sln'
+        configuration: $(buildConfiguration)
+
+    - task: DotNetCoreCLI@2
+      displayName: 'Pack for NuGet'
+      inputs:
+        projects: '$(workingDirectory)/*.sln'
+        command: pack
+        arguments: '-p:PackageVersion="$(NUGET_VERSION)"'
+        verbosityPack: 'Normal'
+        configuration: $(buildConfiguration)
+        includesource: true
+        includesymbols: true
+
+  - job: buildtemplate
+    dependsOn: [ 'prebuild' ]
+    displayName: 'Build dotnet template'
+    steps:
+    - task: DotNetCoreCLI@2
+      displayName: 'dotnet pack'
+      inputs:
+        projects: '$(templateDirectory)/*.csproj'
+        command: pack
         configuration: $(buildConfiguration)
