--- a/sdk/dotnet/test/Microsoft.Datasync.Client.Test/Microsoft.Datasync.Client.Test.csproj
+++ b/sdk/dotnet/test/Microsoft.Datasync.Client.Test/Microsoft.Datasync.Client.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
