--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,45 +9,52 @@ pool:
     vmImage: 'windows-2019'
 
 variables:
-  buildConfiguration: 'Release'
-  sdkDirectory: 'sdk/dotnet'
-  sdkSolution: 'sdk/dotnet/Datasync.Framework.sln'
   BASE_VERSION: 5.0.0
   PREVIEW_LABEL: 'preview'
   BUILD_NUMBER: $[counter(format('{0}_{1}_{2}', variables['BASE_VERSION'], variables['PREVIEW_LABEL'], variables['Build.SourceBranch']), 1)]
   NUGET_VERSION: $[format('{0}-{1}.{2}', variables['BASE_VERSION'], variables['PREVIEW_LABEL'], variables['BUILD_NUMBER'])]
 
-jobs:
-  - job: buildsdk
-    displayName: 'Build .NET SDK'
-    steps:
-      - task: UseDotNet@2
-        displayName: 'Setup .NET Core SDK'
-        inputs:
-          version: '5.0.x'
-          performMultiLevelLookup: true
+resources:
+  repositories:
+    - repository: internal-templates
+      type: github
+      name: xamarin/yaml-templates
+      endpoint: xamarin
+    - repository: components
+      type: github
+      name: xamarin/XamarinComponents
+      endpoint: xamarin
 
-      - task: MSBuild@1
-        displayName: 'Restore packages'
-        inputs:
-          solution: $(sdkSolution)
-          configuration: $(buildConfiguration)
-          msbuildArguments: '/t:restore'
+stages:
+  - stage: build
+    displayName: Build SDK
+    dependsOn: []
+    jobs:
+      - template: .ci/build.yml@components
+        parameters:
+          publishJob: windows
+          areaPath: $(AREA_PATH)
+          cakeFile: sdk/dotnet/build.cake
+          validPackagePrefixes:
+            - Microsoft.AspNetCore.Datasync
+            - Microsoft.Datasync.Client
+          preBuildSteps:
+            - pwsh: |
+                $pr = "pr." + $env:SYSTEM_PULLREQUEST_PULLREQUESTNUMBER
+                $nuget = $env:BASE_VERSION + "-" + $pr + "." + $env:BUILD_NUMBER
+                Write-Host "Preview label: $pr"
+                Write-Host "NuGet version: $nuget"
+                Write-Host "##vso[task.setvariable variable=PREVIEW_LABEL]$pr"
+                Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$nuget"
+              displayName: Use a special preview label for PRs
+              condition: eq(variables['Build.Reason'], 'PullRequest')
+            - pwsh: |
+                $tagVersion = $env:BUILD_SOURCEBRANCHNAME
+                Write-Host "Tag version: $tagVersion"
+                Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$tagVersion"
+              displayName: Override version for tags
+              condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
+            - pwsh: |
+                Write-Host "##vso[build.updatebuildnumber]$env:NUGET_VERSION"
+              displayName: Update the build number with a more readable one
 
-      - task: MSBuild@1
-        displayName: 'Build SDK'
-        inputs:
-          solution: $(sdkSolution)
-          configuration: $(buildConfiguration)
-          msbuildArguments: '/t:build /p:PackageVersion=$(NUGET_VERSION)'
-          
-      - task: DotNetCoreCLI@2
-        displayName: 'Run unit tests'
-        inputs:
-          command: 'test'
-          configuration: $(buildConfiguration)
-          projects: |
-            $(sdkDirectory)/test/**/*.Test.csproj
-            !**/Datasync.Common.Test.csproj
-          arguments: '--no-restore --no-build'
-          
